tests/fixtures/typescript/expressions/spread/invalid_position/input_invalid_spread_return.svelte
<script lang="ts">
	function f() {
		return ...a;
	}
</script>
